# backend_stock

./: .dockerignore  .gitattributes  .gitignore  README.md  compose.yaml  dockerfile.celery  dockerfile.www  fix_permissions.sh  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
backend_stock/: celery.py  www.py
backend_stock/api/: routes.py
backend_stock/conf/: settings.py
backend_stock/models/: stock.py
db/: env.py
docker/www/: prestart.sh
docs/dev/: api.md  cli.md  database.md  settings.md
tests/: conftest.py
